refactor(extended-2.1, basic-3.4): update CSS according to BEM and do not use tag selectors

--- a/style.css
+++ b/style.css
@@ -1,37 +1,39 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-.logo {
+.eisenhower-matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.logo img {
+.eisenhower-matrix__img {
   width: 100%;
 }
-.logo .more-inf {
+.eisenhower-matrix__more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.logo { text-align: center;
+.eisenhower-matrix { text-align: center;
 }
 }
-.todo-list {
+.todo-app {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.new-item__name,
+.list-item__title,
+.list-item__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
-.task-row-wrapper {
+.new-item {
   display: flex;
 }
 ul {
@@ -44,7 +46,9 @@ li, h3 {
 input,button{
   outline:none;
 }
-button {
+.new-item__add-button,
+.list-item__edit-button,
+.list-item__delete-button {
   background: none;
   border: 0px;
   color: #888;
@@ -53,12 +57,14 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.new-item__add-button:hover,
+.list-item__edit-button:hover,
+.list-item__delete-button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.add-item__label,
+.todo-app__list-name {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -67,7 +73,8 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.new-item__name,
+.list-item__task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,21 +86,22 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.new-item__name:focus,
+.list-item__task:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-item__label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -102,47 +110,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.list-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list-item__checkbox {
   margin: 0 10px;
 }
-li > label {
+.list-item__title {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.list-item__task {
   width: 226px
 }
-button.task-delete img {
+.list-item__delete-svg {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.task-delete img:hover {
+.list-item__delete-svg:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .list-item__title {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list-item__task {
   display:none
 }
 
-ul li.edit-mode input[type=text] {
+.list-item_edit-mode .list-item__task {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.list-item_edit-mode .list-item__title {
   display:none;
 }
