--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@
 }
 
 @media (max-width:768px) {
-  .eisenhower-matrix { text-align: center;
+  .eisenhower-matrix {
+    text-align: center;
   }
 }
 .todo-app {
@@ -40,10 +41,12 @@ ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
-input,button{
+input,
+button{
   outline: none;
 }
 .new-item__add-button,
@@ -105,7 +108,6 @@ input,button{
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
